# slow-rs

./: Cargo.toml  README.md  metrics.csv
.github/workflows/: ci.yml  release.yml
src/: app.rs  availability.rs  benchmarks.rs  collectors.rs  config.rs  ipmi.rs  main.rs  metrics.rs  recommendations.rs  smart.rs  thresholds.rs  ui.rs
